--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,8 +20,12 @@ body {
 ************************* */
 
 header {
-  height: 30%;
-  background-image: url("../Images/header-bg-flipped.jpg");
+  height: 28%;
+  background-image: linear-gradient(
+      rgba(63, 61, 105, 0.5),
+      rgba(72, 70, 117, 0.5)
+    ),
+    url("../Images/header-bg-flipped.jpg");
   background-size: cover;
 }
 
@@ -43,6 +47,18 @@ header {
   gap: 1.2rem;
 }
 
+.logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.2rem;
+  cursor: pointer;
+}
+
+.SKS-icon {
+  height: 24px;
+}
+
 .logo-text {
   font-size: 0.9rem;
   color: #fefefe;
@@ -56,8 +72,12 @@ header {
   border: none;
   border-radius: 5px;
   color: #cdcdcd;
-  background-color: #367486;
+  background-color: #6d7896;
   cursor: pointer;
+  background-image: linear-gradient(
+    rgba(63, 61, 105, 0.9),
+    rgba(72, 70, 117, 0.9)
+  );
 }
 
 .profile {
@@ -107,16 +127,38 @@ header {
   font-size: 1.6rem;
 }
 
+.profile-flex {
+  width: 26%;
+  display: flex;
+  flex-direction: column;
+  gap: 0.3rem;
+}
+
 .profile-status {
   display: grid;
   grid-template-columns: 30% 1fr;
-  width: 24%;
+  width: 100%;
   height: 14vh;
-  background-color: antiquewhite;
   padding: 0.4rem;
   align-items: center;
   justify-items: center;
-  border-radius: 5px;
+  border-radius: 3px;
+  background-image: linear-gradient(
+    rgba(235, 243, 196, 0.15),
+    rgba(235, 243, 196, 0.15)
+  );
+}
+
+.snapshot {
+  height: 32px;
+  color: #fefefe;
+  cursor: pointer;
+  align-self: end;
+  background-image: linear-gradient(
+    rgba(235, 243, 196, 0.15),
+    rgba(235, 243, 196, 0.15)
+  );
+  padding: 0.3rem;
 }
 
 .p-c-line-1 {
@@ -159,9 +201,10 @@ header {
 
 .nav-flex {
   display: flex;
-  gap: 2.6rem;
-  margin-left: 1rem;
+  gap: 2rem;
+  padding-left: 1rem;
   align-items: center;
+  border-left: 1px solid #cdcdcd;
 }
 
 .left-content {
@@ -169,7 +212,6 @@ header {
   grid-row: 1/-3;
   margin-left: 2.4rem;
   margin-top: 1rem;
-  border-right: 1px solid #cdcdcd;
 }
 .nav {
   display: flex;
@@ -179,6 +221,9 @@ header {
 }
 .main-body {
   grid-column: 2/-1;
+  border-left: 1px solid #cdcdcd;
+  padding-bottom: 2.6rem;
+  padding-left: 1rem;
 }
 
 .claim-btn {
@@ -200,19 +245,21 @@ header {
 .nav-flex a {
   padding: 1rem 0;
   text-decoration: none;
-  color: #cdcdcd;
+  color: #c2c2c2;
+  font-size: 1.1em;
 }
 
 .nav-flex a:nth-child(1):link,
 .nav-flex a:nth-child(1):visited {
   color: #1a1a1a;
-  border-bottom: 3px solid #fca424;
+  box-shadow: inset 0 -2px 0 #fca424;
   font-weight: 600;
 }
 
 .nav-flex a:hover,
 .nav-flex a:active {
   color: #1a1a1a;
+  box-shadow: inset 0 -2px 0 #fca424;
 }
 
 /* 
@@ -228,7 +275,6 @@ header {
 
 .about-family {
   padding-top: 2rem;
-  border-right: 1px solid #cdcdcd;
 }
 
 .about-section {
@@ -238,6 +284,24 @@ header {
   font-weight: bold;
   border-bottom: 1px solid #cdcdcd;
   width: 90%;
+  padding-bottom: 0.5rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.elipsis-horizontal-icon {
+  height: 20px;
+  cursor: pointer;
+}
+
+.elipsis-horizontal-icon:hover,
+.elipsis-horizontal-icon:actve {
+  stroke: "#1a1a1a";
+}
+
+.fam-header-pd {
+  margin-bottom: 0.5rem;
 }
 
 .section {
@@ -253,7 +317,7 @@ header {
 }
 
 .fam-head {
-  color: #cdcdcd;
+  color: #c2c2c2;
 }
 
 .about-me {
@@ -269,7 +333,7 @@ header {
 
 .entity-abtme {
   text-transform: uppercase;
-  color: #cdcdcd;
+  color: #c2c2c2;
 }
 
 /* 
@@ -301,6 +365,32 @@ header {
   box-shadow: 0 0 5px #cdcdcd;
 }
 
+.box-img {
+  height: 28px;
+  border-radius: 50%;
+  margin-right: -0.7rem;
+  border: 3px solid #fefefe;
+}
+
+.box-img-flex {
+  display: flex;
+}
+
+.box-img:last-child {
+  background-image: linear-gradient(
+      rgba(27, 229, 175, 0.5),
+      rgba(27, 229, 175, 0.5)
+    ),
+    url("../Images/uifaces-human-image-2.jpg");
+  background-size: cover;
+  display: flex;
+  object-fit: cover;
+  justify-content: center;
+  align-items: center;
+  width: 28px;
+  color: #fefefe;
+}
+
 .number {
   font-size: 3rem;
   padding-left: 4rem;
@@ -311,12 +401,17 @@ header {
 
 /* *****Cards-Section****** */
 
+.card-img {
+  height: 5.2rem;
+  border-radius: 3px;
+}
+
 .cards {
   padding: 1rem;
   display: grid;
   grid-template-columns: 20% 1fr 30%;
-  grid-template-rows: 5rem;
-  width: 178%;
+  grid-template-rows: 5.3rem;
+  width: 135%;
   box-shadow: 0 0 5px #cdcdcd;
 }
 
@@ -328,28 +423,43 @@ header {
 
 .additional-details-head {
   color: #1a1a1a;
-  font-size: 1em;
+  font-size: 1.2em;
 }
 
 .additional-details {
-  color: #cdcdcd;
-  font-size: 1em;
+  color: #c2c2c2;
+  font-size: 1.2em;
 }
 
-/* .card-content-flex {
-  display: flex;
-  padding-top: 0.5rem;
-  flex-direction: column;
-  gap: 0.3rem;
-} */
+.card-content {
+  padding-left: 0.5rem;
+}
 
 .card-content-vertical-flex {
   display: flex;
-  padding-top: 0.5rem;
-  padding-left: 1.5rem;
+  padding-top: 0.2rem;
+  /* padding-left: 1.5rem; */
   flex-direction: column;
-  gap: 0.5rem;
+  gap: 0.2rem;
   list-style: none;
+}
+
+.logo-flex {
+  display: flex;
+  align-items: center;
+  gap: 0.2rem;
+}
+
+.filed-logo {
+  height: 20px;
+}
+
+.due-logo {
+  height: 20px;
+}
+
+.map-logo {
+  height: 20px;
 }
 
 .pay-btn {
@@ -380,25 +490,31 @@ header {
   justify-content: space-between;
 }
 
+/* 
+*************************
+--------Activity Section----------
+************************* */
+
 .right-card {
   width: 32%;
   box-shadow: 0 0 5px #cdcdcd;
   padding: 1rem 0;
-  padding-left: 0.8rem;
-  padding-right: 0.8rem;
+  padding-left: 0.7rem;
+  padding-right: 0.7rem;
 }
 
 .right-card-header {
-  font-size: 1.3em;
+  font-size: 1.2em;
   padding-bottom: 0.5rem;
 
   border-bottom: 1px solid #cdcdcd;
+  margin-bottom: 0.5rem;
 }
 
 .list-1 {
   display: flex;
   flex-direction: column;
-  gap: 0.3rem;
+  gap: 0.4rem;
   padding: 0.7rem 0;
   padding-right: 2.5rem;
   padding-left: 1.5rem;
@@ -421,4 +537,94 @@ header {
 .list-time {
   font-size: 1em;
   color: #cdcdcd;
+}
+
+.activity-dot {
+  position: relative;
+}
+
+.activity-dot::before {
+  content: "";
+  height: 9px;
+  width: 9px;
+  border-radius: 50%;
+  position: absolute;
+  top: 13px;
+  left: 3px;
+}
+
+.activity-dot-blue::before {
+  background-color: #57a9f2;
+  box-shadow: 0 0 5px 1px #57aaf2;
+}
+
+.activity-dot-orange::before {
+  background-color: #fca424;
+  box-shadow: 0 0 5px 1px #fca424;
+}
+
+.activity-dot-green::before {
+  background-color: #18d39e;
+  box-shadow: 0 0 5px 1px #18d39e;
+}
+
+/* .activity-list::before {
+  content: "";
+  position: absolute;
+  border-left: 3px solid #1a1a1a;
+  height: 90%;
+} */
+
+.activity-dot::after {
+  content: "";
+  height: 69px;
+  border-left: 1px solid #c2c2c2;
+  position: absolute;
+  top: 23px;
+  left: 7px;
+}
+
+.activity-dot:last-child::after {
+  content: "";
+  height: 50px;
+  border-left: 1px solid #c2c2c2;
+  position: absolute;
+  top: 23px;
+  left: 7px;
+}
+
+.activity-list::-webkit-scrollbar {
+  width: 5px;
+}
+
+.activity-list::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+.activity-list::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: #fca424;
+}
+
+.activity-list {
+  overflow-y: scroll;
+  height: 312px;
+}
+
+/* 
+*************************
+--------Page Scrollbar----------
+************************* */
+
+html::-webkit-scrollbar {
+  width: 7px;
+}
+
+html::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+html::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: #fca424;
 }
