--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,16 +2,13 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100%;
-  margin: 40px auto;
   font-size: 62.5%;
   font-family: sans-serif;
 }
 
 .container {
-  width: 70%;
-  height: 110vh;
-  box-shadow: 0 0 15px #cdcdcd;
+  width: 100%;
+  height: 100vh;
 }
 
 /* 
@@ -20,12 +17,12 @@ body {
 ************************* */
 
 header {
-  height: 28%;
+  height: 31vh;
   background-image: linear-gradient(
       rgba(63, 61, 105, 0.5),
       rgba(72, 70, 117, 0.5)
     ),
-    url("../Images/header-bg-flipped.jpg");
+    url("../Images/header-bg-1.jpg");
   background-size: cover;
 }
 
@@ -70,18 +67,40 @@ header {
   padding: 0.4rem 0.8rem;
   text-transform: uppercase;
   border: none;
-  border-radius: 5px;
+  border-radius: 3px;
   color: #cdcdcd;
   background-color: #6d7896;
   cursor: pointer;
+  background-image: linear-gradient(rgba(63, 61, 105, 1), rgba(63, 61, 105, 1));
+}
+
+.nav-button:hover {
   background-image: linear-gradient(
-    rgba(63, 61, 105, 0.9),
-    rgba(72, 70, 117, 0.9)
+    rgba(63, 61, 105, 0.5),
+    rgba(63, 61, 105, 0.5)
   );
 }
 
 .profile {
   border-radius: 5px;
+}
+
+.notification-icon {
+  position: absolute;
+  align-self: center;
+}
+
+.notification::before {
+  content: "";
+  height: 7px;
+  width: 7px;
+  border-radius: 50%;
+  background-color: #fca424;
+  position: relative;
+  display: block;
+  top: 12px;
+  left: 12.5px;
+  border: 1px solid #fefefe;
 }
 
 /* 
@@ -97,7 +116,7 @@ header {
 .customer-info {
   display: flex;
   flex-direction: column;
-  gap: 0.45rem;
+  gap: 0.4rem;
 }
 
 .more-info-flex {
@@ -108,7 +127,7 @@ header {
 
 .section-1 {
   display: flex;
-  gap: 1.2rem;
+  gap: 1.7rem;
 }
 
 .entity {
@@ -137,9 +156,9 @@ header {
 .profile-status {
   display: grid;
   grid-template-columns: 30% 1fr;
-  width: 100%;
-  height: 14vh;
-  padding: 0.4rem;
+  width: 90%;
+  height: 15vh;
+  padding: 1rem;
   align-items: center;
   justify-items: center;
   border-radius: 3px;
@@ -147,10 +166,37 @@ header {
     rgba(235, 243, 196, 0.15),
     rgba(235, 243, 196, 0.15)
   );
+  align-self: end;
+}
+
+.progress-bar-circular {
+  background-color: rgba(235, 243, 196, 0.15);
+  height: 3.125rem;
+  width: 3.125rem;
+  border-radius: 50%;
+  margin: 0.625rem;
+  position: relative;
+}
+
+.percentage {
+  position: absolute;
+  font-size: 1.2em;
+  color: #fefefe;
+  top: 19px;
+  left: 16px;
+  transform: rotate(47deg);
+}
+
+.progress-container {
+  border-radius: 50%;
+  border: 5px solid #fca424;
+  border-right-color: rgba(235, 243, 196, 0.15);
+  transform: rotate(315deg);
 }
 
 .snapshot {
-  height: 32px;
+  height: 24px;
+  width: 32px;
   color: #fefefe;
   cursor: pointer;
   align-self: end;
@@ -195,16 +241,16 @@ header {
 
 .main-content {
   display: grid;
-  grid-template-columns: 24% 1fr;
-  grid-template-rows: 2.8rem auto;
+  grid-template-columns: 19% 1fr;
+  grid-template-rows: 3rem auto;
 }
 
 .nav-flex {
   display: flex;
-  gap: 2rem;
+  gap: 4.5rem;
   padding-left: 1rem;
   align-items: center;
-  border-left: 1px solid #cdcdcd;
+  border-left: 2px solid rgb(205, 205, 205, 0.5);
 }
 
 .left-content {
@@ -217,18 +263,18 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  border-bottom: 2px solid #cdcdcd;
+  border-bottom: 2px solid rgb(205, 205, 205, 0.5);
 }
 .main-body {
   grid-column: 2/-1;
-  border-left: 1px solid #cdcdcd;
-  padding-bottom: 2.6rem;
+  border-left: 2px solid rgb(205, 205, 205, 0.5);
+  padding-bottom: 0.5rem;
   padding-left: 1rem;
 }
 
 .claim-btn {
   padding: 0.3rem 0.6rem;
-  width: 10%;
+  width: 8%;
   border: none;
   background-color: #18d39e;
   color: #fefefe;
@@ -236,6 +282,10 @@ header {
   text-transform: uppercase;
   border-radius: 3px;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.4rem;
 }
 
 .claim-btn:hover {
@@ -243,23 +293,25 @@ header {
 }
 
 .nav-flex a {
-  padding: 1rem 0;
+  padding: 1.1rem 0;
   text-decoration: none;
   color: #c2c2c2;
-  font-size: 1.1em;
+  font-size: 1.2em;
+  font-weight: 600;
 }
 
 .nav-flex a:nth-child(1):link,
 .nav-flex a:nth-child(1):visited {
   color: #1a1a1a;
-  box-shadow: inset 0 -2px 0 #fca424;
+  box-shadow: inset 0 -3px 0 #fca424;
   font-weight: 600;
 }
 
 .nav-flex a:hover,
 .nav-flex a:active {
   color: #1a1a1a;
-  box-shadow: inset 0 -2px 0 #fca424;
+  box-shadow: inset 0 -3px 0 #fca424;
+  font-weight: 600;
 }
 
 /* 
@@ -282,7 +334,7 @@ header {
   text-transform: uppercase;
   color: #1a1a1a;
   font-weight: bold;
-  border-bottom: 1px solid #cdcdcd;
+  border-bottom: 2px solid rgb(205, 205, 205, 0.5);
   width: 90%;
   padding-bottom: 0.5rem;
   display: flex;
@@ -305,10 +357,10 @@ header {
 }
 
 .section {
-  padding: 0.8rem 0;
+  padding: 0.3rem 0;
   display: flex;
   flex-direction: column;
-  gap: 0.3rem;
+  gap: 0.2rem;
 }
 
 .section-img {
@@ -328,7 +380,7 @@ header {
   display: flex;
   flex-direction: column;
   gap: 0.25rem;
-  padding: 1rem 0;
+  padding: 0.4rem 0 0 0;
 }
 
 .entity-abtme {
@@ -342,8 +394,8 @@ header {
 ************************* */
 
 .box-section {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  margin-top: 0.75rem;
+  margin-bottom: 0.75rem;
   margin-right: 2.4rem;
   display: flex;
   gap: 1rem;
@@ -361,14 +413,14 @@ header {
   grid-template-rows: 6rem;
   width: 33%;
   align-items: center;
-  justify-items: center;
-  box-shadow: 0 0 5px #cdcdcd;
+  /* justify-items: center; */
+  box-shadow: 0 0 10px rgb(205, 205, 205, 0.4);
 }
 
 .box-img {
-  height: 28px;
+  height: 35px;
   border-radius: 50%;
-  margin-right: -0.7rem;
+  margin-right: -0.6rem;
   border: 3px solid #fefefe;
 }
 
@@ -387,16 +439,29 @@ header {
   object-fit: cover;
   justify-content: center;
   align-items: center;
-  width: 28px;
+  width: 35px;
   color: #fefefe;
+}
+
+.box-text-img {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+  padding-left: 2rem;
+}
+
+.box-text {
+  font-size: 1.2em;
+  color: rgb(194, 194, 194, 1.5);
 }
 
 .number {
   font-size: 3rem;
-  padding-left: 4rem;
+  padding-left: 2rem;
   padding-right: 1rem;
-  border-right: 1px solid #cdcdcd;
+  border-right: 2px solid rgb(205, 205, 205, 0.5);
   font-family: "Dosis", sans-serif;
+  justify-self: center;
 }
 
 /* *****Cards-Section****** */
@@ -404,15 +469,18 @@ header {
 .card-img {
   height: 5.2rem;
   border-radius: 3px;
+  display: flex;
+  justify-self: center;
 }
 
 .cards {
-  padding: 1rem;
+  padding: 0.75rem 1rem 0.75rem 0;
   display: grid;
-  grid-template-columns: 20% 1fr 30%;
-  grid-template-rows: 5.3rem;
-  width: 135%;
-  box-shadow: 0 0 5px #cdcdcd;
+  grid-template-columns: 17% 1fr 30%;
+  grid-template-rows: 5rem;
+  width: 212%;
+  /* width: 45.75rem; */
+  box-shadow: 0 0 10px rgb(205, 205, 205, 0.4);
 }
 
 .client-name {
@@ -431,16 +499,12 @@ header {
   font-size: 1.2em;
 }
 
-.card-content {
-  padding-left: 0.5rem;
-}
-
 .card-content-vertical-flex {
   display: flex;
   padding-top: 0.2rem;
   /* padding-left: 1.5rem; */
   flex-direction: column;
-  gap: 0.2rem;
+  gap: 0.1rem;
   list-style: none;
 }
 
@@ -462,6 +526,11 @@ header {
   height: 20px;
 }
 
+.pay-icon {
+  height: 20px;
+  transform: rotate(320deg);
+}
+
 .pay-btn {
   height: 1.6rem;
   width: 50%;
@@ -472,6 +541,10 @@ header {
   justify-self: end;
   align-self: end;
   cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.4rem;
 }
 
 .pay-btn:hover {
@@ -496,26 +569,25 @@ header {
 ************************* */
 
 .right-card {
-  width: 32%;
-  box-shadow: 0 0 5px #cdcdcd;
-  padding: 1rem 0;
-  padding-left: 0.7rem;
-  padding-right: 0.7rem;
+  width: 32.3%;
+  box-shadow: 0 0 10px rgb(205, 205, 205, 0.4);
+  padding: 1rem 2rem;
+  height: 335px;
 }
 
 .right-card-header {
   font-size: 1.2em;
   padding-bottom: 0.5rem;
 
-  border-bottom: 1px solid #cdcdcd;
-  margin-bottom: 0.5rem;
+  border-bottom: 2px solid rgb(205, 205, 205, 0.5);
+  margin-bottom: 1rem;
 }
 
 .list-1 {
   display: flex;
   flex-direction: column;
   gap: 0.4rem;
-  padding: 0.7rem 0;
+  padding: 0.6rem 0;
   padding-right: 2.5rem;
   padding-left: 1.5rem;
 }
@@ -608,7 +680,7 @@ header {
 
 .activity-list {
   overflow-y: scroll;
-  height: 312px;
+  height: 270px;
 }
 
 /* 
