--- a/CSS/style.css
+++ b/CSS/style.css
@@ -17,7 +17,7 @@ body {
 ************************* */
 
 header {
-  height: 31vh;
+  height: 29.5vh;
   background-image: linear-gradient(
       rgba(63, 61, 105, 0.5),
       rgba(72, 70, 117, 0.5)
@@ -35,7 +35,7 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 2rem;
+  margin-bottom: 1rem;
 }
 
 .nav-list {
@@ -57,7 +57,7 @@ header {
 }
 
 .logo-text {
-  font-size: 0.9rem;
+  font-size: 0.8rem;
   color: #fefefe;
   font-weight: 500;
   text-decoration: none;
@@ -83,6 +83,7 @@ header {
 
 .profile {
   border-radius: 5px;
+  box-shadow: 0 0 10px rgb(0, 0, 0, 0.4);
 }
 
 .notification-icon {
@@ -116,7 +117,7 @@ header {
 .customer-info {
   display: flex;
   flex-direction: column;
-  gap: 0.4rem;
+  gap: 0.6rem;
 }
 
 .more-info-flex {
@@ -150,15 +151,15 @@ header {
   width: 26%;
   display: flex;
   flex-direction: column;
-  gap: 0.3rem;
+  gap: 0.55rem;
 }
 
 .profile-status {
   display: grid;
-  grid-template-columns: 30% 1fr;
-  width: 90%;
-  height: 15vh;
-  padding: 1rem;
+  grid-template-columns: 40% 1fr;
+  width: 75%;
+  height: 15.5vh;
+  padding: 1.2rem 0 1.2rem 0;
   align-items: center;
   justify-items: center;
   border-radius: 3px;
@@ -176,6 +177,7 @@ header {
   border-radius: 50%;
   margin: 0.625rem;
   position: relative;
+  justify-self: end;
 }
 
 .percentage {
@@ -189,9 +191,10 @@ header {
 
 .progress-container {
   border-radius: 50%;
-  border: 5px solid #fca424;
+  border: 6px solid #fca424;
   border-right-color: rgba(235, 243, 196, 0.15);
   transform: rotate(315deg);
+  margin-left: 1.2rem;
 }
 
 .snapshot {
@@ -205,6 +208,13 @@ header {
     rgba(235, 243, 196, 0.15)
   );
   padding: 0.3rem;
+}
+
+.snapshot:hover {
+  background-image: linear-gradient(
+    rgba(235, 243, 196, 0.1),
+    rgba(235, 243, 196, 0.1)
+  );
 }
 
 .p-c-line-1 {
@@ -242,12 +252,12 @@ header {
 .main-content {
   display: grid;
   grid-template-columns: 19% 1fr;
-  grid-template-rows: 3rem auto;
+  grid-template-rows: 3.1rem auto;
 }
 
 .nav-flex {
   display: flex;
-  gap: 4.5rem;
+  gap: 4rem;
   padding-left: 1rem;
   align-items: center;
   border-left: 2px solid rgb(205, 205, 205, 0.5);
@@ -268,7 +278,7 @@ header {
 .main-body {
   grid-column: 2/-1;
   border-left: 2px solid rgb(205, 205, 205, 0.5);
-  padding-bottom: 0.5rem;
+  padding-bottom: 1rem;
   padding-left: 1rem;
 }
 
@@ -300,11 +310,22 @@ header {
   font-weight: 600;
 }
 
+.home-icon {
+  height: 16px;
+}
+
+.dashboard {
+  display: flex;
+  gap: 0.5rem;
+  align-items: center;
+}
+
 .nav-flex a:nth-child(1):link,
 .nav-flex a:nth-child(1):visited {
   color: #1a1a1a;
   box-shadow: inset 0 -3px 0 #fca424;
   font-weight: 600;
+  padding: 1rem 0;
 }
 
 .nav-flex a:hover,
@@ -321,22 +342,22 @@ header {
 
 .face {
   border-radius: 50%;
-  height: 40px;
-  width: 40px;
+  height: 35px;
+  width: 35px;
 }
 
 .about-family {
-  padding-top: 2rem;
+  padding-top: 1.5rem;
 }
 
 .about-section {
-  font-size: 0.8rem;
+  font-size: 0.7rem;
   text-transform: uppercase;
   color: #1a1a1a;
   font-weight: bold;
   border-bottom: 2px solid rgb(205, 205, 205, 0.5);
   width: 90%;
-  padding-bottom: 0.5rem;
+  padding-bottom: 0.2rem;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -357,15 +378,15 @@ header {
 }
 
 .section {
-  padding: 0.3rem 0;
+  padding: 0.5rem 0;
   display: flex;
   flex-direction: column;
-  gap: 0.2rem;
+  gap: 0.7rem;
 }
 
 .section-img {
   display: flex;
-  gap: 0.8rem;
+  gap: 1.2rem;
 }
 
 .fam-head {
@@ -379,8 +400,8 @@ header {
 .about-me-flex {
   display: flex;
   flex-direction: column;
-  gap: 0.25rem;
-  padding: 0.4rem 0 0 0;
+  gap: 0.26rem;
+  padding: 0.8rem 0 0 0;
 }
 
 .entity-abtme {
@@ -478,14 +499,14 @@ header {
   display: grid;
   grid-template-columns: 17% 1fr 30%;
   grid-template-rows: 5rem;
-  width: 212%;
+  width: 196%;
   /* width: 45.75rem; */
   box-shadow: 0 0 10px rgb(205, 205, 205, 0.4);
 }
 
 .client-name {
   font-weight: 600;
-  font-size: 1.5em;
+  font-size: 1.3em;
   text-transform: uppercase;
 }
 
@@ -504,7 +525,7 @@ header {
   padding-top: 0.2rem;
   /* padding-left: 1.5rem; */
   flex-direction: column;
-  gap: 0.1rem;
+  gap: 0.3rem;
   list-style: none;
 }
 
@@ -515,15 +536,15 @@ header {
 }
 
 .filed-logo {
-  height: 20px;
+  height: 18px;
 }
 
 .due-logo {
-  height: 20px;
+  height: 18px;
 }
 
 .map-logo {
-  height: 20px;
+  height: 18px;
 }
 
 .pay-icon {
@@ -533,7 +554,7 @@ header {
 
 .pay-btn {
   height: 1.6rem;
-  width: 50%;
+  width: 40%;
   background-color: #fca424;
   color: #fefefe;
   border: none;
@@ -545,6 +566,7 @@ header {
   justify-content: center;
   align-items: center;
   gap: 0.4rem;
+  padding: 1rem;
 }
 
 .pay-btn:hover {
